<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/adMob"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/mySwitch"
            android:layout_below="@+id/mySwitch"
            android:layout_marginTop="30dp"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignTop="@+id/textView1"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/textView1"
            android:gravity="center"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="30dp"
            android:text="@string/tribalhouse"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignTop="@+id/textView3"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/textView3"
            android:gravity="center"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="30dp"
            android:text="@string/minimalhouse"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignTop="@+id/textView5"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/textView5"
            android:gravity="center"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/mySwitch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="30dp"
            android:text="@string/theme"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="NewApi" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/action_settings"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <Switch
            android:id="@+id/mySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView7"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/notification"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="NewApi" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adMob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-1576175228836763/7433287732"></com.google.android.gms.ads.AdView>

</RelativeLayout>